--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 	<div class="header">
-		<h1>Crystal Collector</h1>
+		<h1>Crystal Collector Game</h1>
 	</div>
 	<div class="instructions">
 		<h3>How To Play The Game</h3>
 		</br>
 		<ol>
-			<li>You will be given a random number at the start of the game.</li>
+			<li>A random number will be given to you at the beginning of the game.</li>
 			<li>There are four crystals below.</li>
 			<ul>
 				<li id="blue">Blue</li>
@@ -23,11 +23,11 @@
 				<li id="pink">Pink</li>
 				<li id="yellow">Yellow</li>
 			</ul>
-			<li>By clicking on a crystal, you will add a specific amount of points to your total score.</li>
-			<li>You win the game by matching your total score to the random number.</li>
-			<li>You lose the game if your total score goes above the random number.</li>
-			<li>The value of each crystal is hidden from you until you click on it.</li>
-			<li>Each time when the game starts, the game will change the values of each crystal.</li>
+			<li>When you click a crystal, you will add a specific amount of points to your total score.</li>
+			<li>If your total score matches the random number, you will win the game.</li>
+			<li>If your total score goes above the random number, you lose the game.</li>
+			<li>Each crystal's value is hidden until you click on it.</li>
+			<li>The value of each crystal will change everytime the game resets.</li>
 		</ol>
 	</div>
 	<div class="numberToMatch">
